--- a/practice/FragmentManagerDemo2/app/src/main/res/layout/activity_main.xml
+++ b/practice/FragmentManagerDemo2/app/src/main/res/layout/activity_main.xml
@@ -13,10 +13,15 @@
         android:layout_height="wrap_content"
         android:fitsSystemWindows="true">
 
-        <com.google.android.material.appbar.MaterialToolbar
+        <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
+            android:minHeight="?attr/actionBarSize"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize" />
+            android:layout_height="wrap_content"
+            android:theme="@style/ToolbarTheme"
+            app:titleTextAppearance="@style/Toolbar.TitleText"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            />
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -26,6 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:defaultNavHost="true"
-        app:navGraph="@navigation/nav_graph" />
+        app:navGraph="@navigation/nav_graph"
+        tools:layout="@layout/fragment_login" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
