--- a/practice/FragmentManagerDemo2/app/src/main/res/layout/fragment_login.xml
+++ b/practice/FragmentManagerDemo2/app/src/main/res/layout/fragment_login.xml
@@ -17,6 +17,7 @@
             android:layout_gravity="center"
             android:layout_marginTop="24dp"
             android:textSize="24sp"
+            app:layout_constraintEnd_toStartOf="@+id/guideline2"
             app:layout_constraintStart_toStartOf="@+id/guideline"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Login Fragment" />
@@ -77,10 +78,11 @@
             android:layout_width="0dp"
             android:layout_height="48dp"
             android:layout_gravity="bottom|center_horizontal"
+            android:layout_marginTop="16dp"
             android:text="@string/login"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/guideline2"
-            app:layout_constraintStart_toStartOf="@+id/guideline" />
+            app:layout_constraintStart_toStartOf="@+id/guideline"
+            app:layout_constraintTop_toBottomOf="@+id/tilPassword" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline"
