--- a/06-64-MusicPlayer/app/src/main/res/values/themes.xml
+++ b/06-64-MusicPlayer/app/src/main/res/values/themes.xml
@@ -1,16 +1,42 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.MusicPlayer" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.MusicPlayer" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/blue</item>
+        <item name="colorPrimaryVariant">@color/blue</item>
         <item name="colorOnPrimary">@color/white</item>
+        <item name="colorAccent">@color/white</item>
+
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
+
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor">@color/white</item>
+
         <!-- Customize your theme here. -->
+
     </style>
+
+    <style name="Theme.MusicPlayer.IconFillColor">
+        <item name="tint">@color/blue</item>
+    </style>
+
+    <style name="Theme.MusicPlayer.IconFillColorTransparent">
+        <item name="tint">#CB0B0B0B</item>
+    </style>
+
+    <style name="roundedImageView">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">8dp</item>
+    </style>
+
+    <style name="Theme.MusicPlayer.progressBar">
+        <item name="android:progressBackgroundTint">@color/black</item>
+        <item name="android:progressTint">@color/blue</item>
+        <item name="android:thumbTint">@color/blue</item>
+    </style>
+
 </resources>
