--- a/07-79-TrackLocationService/app/src/main/res/values/themes.xml
+++ b/07-79-TrackLocationService/app/src/main/res/values/themes.xml
@@ -1,9 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.TrackLocationService" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    <style name="Base.Theme.TrackLocationService" parent="Theme.AppCompat.DayNight.NoActionBar">
     </style>
 
-    <style name="Theme.TrackLocationService" parent="Base.Theme.TrackLocationService" />
+    <style name="Theme.TrackLocationService" parent="Base.Theme.TrackLocationService">
+    </style>
 </resources>
