--- a/07-79-TrackLocationService/app/src/main/res/navigation/nav_graph.xml
+++ b/07-79-TrackLocationService/app/src/main/res/navigation/nav_graph.xml
@@ -3,10 +3,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/locationFragment">
+    app:startDestination="@id/navigation_log">
     <fragment
-        android:id="@+id/locationFragment"
+        android:id="@+id/navigation_log"
         android:name="com.cubix.tracklocationservice.fragments.LocationFragment"
-        android:label="fragment_location"
+        android:label="Tracker log"
         tools:layout="@layout/fragment_location" />
+    <fragment
+        android:id="@+id/navigation_map"
+        android:name="com.cubix.tracklocationservice.fragments.MapsFragment"
+        android:label="Tracker map"
+        tools:layout="@layout/fragment_maps" />
+    <fragment
+        android:id="@+id/navigation_about"
+        android:name="com.cubix.tracklocationservice.fragments.AboutFragment"
+        android:label="About"
+        tools:layout="@layout/fragment_about" />
 </navigation>
