--- a/07-79-TrackLocationService/app/src/main/res/values/themes.xml
+++ b/07-79-TrackLocationService/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.TrackLocationService" parent="Theme.AppCompat.DayNight.NoActionBar">
+    <style name="Base.Theme.TrackLocationService" parent="Theme.MaterialComponents.DayNight">
     </style>
 
     <style name="Theme.TrackLocationService" parent="Base.Theme.TrackLocationService">
