--- a/08-98-WeatherDemo_MVVM_Starter/app/src/main/res/layout/activity_scrolling.xml
+++ b/08-98-WeatherDemo_MVVM_Starter/app/src/main/res/layout/activity_scrolling.xml
@@ -30,7 +30,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
-                app:popupTheme="@style/AppTheme.PopupOverlay" />
+                app:popupTheme="@style/AppTheme.PopupOverlay"
+                app:title="@string/app_name" />
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
