--- a/08-98-WeatherDemo_MVVM_Starter/app/src/main/res/layout/activity_weather_details.xml
+++ b/08-98-WeatherDemo_MVVM_Starter/app/src/main/res/layout/activity_weather_details.xml
@@ -15,35 +15,44 @@
         android:layout_height="wrap_content"
         android:textSize="28sp"
         android:textStyle="bold"
-        android:layout_marginBottom="20dp"/>
+        android:layout_marginBottom="20dp"
+        tools:text="Budapest" />
     <TextView
         android:id="@+id/tvMain"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="24sp" />
+        android:textSize="24sp"
+        tools:text="Clear" />
     <TextView
         android:id="@+id/tvDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="24sp" />
+        android:textSize="24sp"
+        tools:text="clear sky" />
     <TextView
         android:id="@+id/tvTemperature"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="24sp" />
+        android:textSize="24sp"
+        tools:text="15 °C" />
     <TextView
         android:id="@+id/tvSunrise"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="24sp" />
+        android:textSize="24sp"
+        tools:text="Sunrise at 05:33" />
     <TextView
         android:id="@+id/tvSunset"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="24sp" />
+        android:textSize="24sp"
+        tools:text="Sunset at 20:04" />
 
     <ImageView
         android:id="@+id/ivWeatherIcon"
-        android:layout_width="100dp"
-        android:layout_height="100dp" />
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:contentDescription="@string/weather_icon"
+        tools:src="@drawable/tools01d" />
+
 </LinearLayout>
