--- a/10-b2-TaxiDemo/app/src/main/res/layout/activity_main.xml
+++ b/10-b2-TaxiDemo/app/src/main/res/layout/activity_main.xml
@@ -6,4 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".ui.MainActivity">
 
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".ui.fragments.MapFragment" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
